Added author posts to staff directory

--- a/functions/test-db/json2/scvo/partials/wee-search.hbs
+++ b/functions/test-db/json2/scvo/partials/wee-search.hbs
@@ -1,7 +1,7 @@
 <div class="mdc-card mdc-card-search">
     <section class="mdc-card__primary">
         <h2 class="mdc-card__title mdc-card__title--large">{{title}}</h2>
-        <form [searchroute]="'{{searchRoute}}'">
+        <form [searchroute]="'{{searchRoute}}'" autocomplete="off">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
                     <div class="mdc-layout-grid__cell">
