--- a/functions/test-db/json2/scvo/templates/staff-search.hbs
+++ b/functions/test-db/json2/scvo/templates/staff-search.hbs
@@ -49,7 +49,7 @@
                     </form>
 
                     {{#each primaryResponse.aggregations.query.buckets}}
-                    <div class="v-margin">
+                    <div class="v-margin staff-list">
                         <h2>{{key}}</h2>
                         {{#each staff.hits.hits}}
                         {{{_source.rendered.scvo_list}}}
