--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -26,7 +26,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-12-tablet mdc-layout-grid__cell--span-12-phone">
                     <h3>What can we help you with?</h3>
-                    <form [searchroute]="'main_search'" class="home_search_form">
+                    <form [searchroute]="'main_search'" class="home_search_form" autocomplete="off">
                         <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Search SCVO, Goodmoves, TFN, and more" id="q" name="q">
                         <button type="submit" class="mdc-toolbar__icon mdc-toolbar__search search-button-large" aria-label="Search" alt="Search">
                             <span class="far fa-2x fa-search" aria-hidden="true"></span>
