--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -47,7 +47,7 @@
                                 <a class="mdc-tab{{#if match}} mdc-tab--active{{/if}}" href="{{path}}"><span class="mdc-tab--label">{{{label}}}</span></a>
                                 {{/each}}
                             </nav>
-                            <form [searchroute]="'main_search'" class="mdc-form-field mdc-form-field--align-end search_form">
+                            <form [searchroute]="'main_search'" class="mdc-form-field mdc-form-field--align-end search_form" autocomplete="off">
                                 <div class="mdc-textfield">
                                     <input type="text" class="mdc-textfield__input white-text mdc-text-field searchRoute" placeholder="Search" id="q" name="q" aria-label="Search keywords" value="{{params.query.q}}">
                                 </div>
@@ -201,7 +201,7 @@
     </scvo-site>
 
     <div id="spinner" style="position:fixed; top:0; left:0; right:0; bottom:0; background-color:#fff; z-index:9999; display:flex; align-items:center; justify-content:center;">
-        <span class="fa fa-fw fa-circle-o-notch fa-spin" style="color:#C2185B;"></span>
+        <span class="fal fa-spinner-third fa-spin" style="color:#C2185B; font-size:2rem;"></span>
     </div>
 
     <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
