--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -803,7 +803,7 @@ iframe {
 }
 .policy-research .latest-content .gist,
 .home .latest-content .gist,
-.digital .gist,
+.digital .latest_content .gist,
 .page-related .gist,
 .post-related .gist {
     box-shadow: none;
@@ -822,6 +822,9 @@ iframe {
     h3 {
         margin-bottom: $spacing-unit;
     }
+}
+.page-related h3 {
+    margin-top: 0;
 }
 
 .hero {
@@ -1776,6 +1779,7 @@ h1.support-sector {
 
 .menu-sidebar {
     margin-top: $spacing-unit;
+    margin-bottom: $spacing-unit*2;
     box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     -webkit-box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
     .mdc-button {
