--- a/functions/test-db/json2/scvo/templates/staff-search.hbs
+++ b/functions/test-db/json2/scvo/templates/staff-search.hbs
@@ -26,7 +26,7 @@
             <div class="mdc-layout-grid__inner">
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
                     <form [searchroute]="'staff_search'" data-auto-search="true">
-                        <h2>Filter by</h2>
+                        <h3>Filter</h3>
                         <div class="mdc-form-field">
                             <select class="mdc-select" role="listbox" id="department" name="department">
                                 <option value="" {{#if params.query.department}}{{else}}selected{{/if}}>All departments</option>
