--- a/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document-search.hbs
@@ -36,7 +36,7 @@
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
                     {{#each primaryResponse.hits.hits}}
-                    {{{_source.rendered.list}}}
+                    {{{_source.rendered.scvo_list}}}
                     {{/each}}
 
                     {{> pagination}}
