--- a/functions/test-db/json2/scvo/templates/home.hbs
+++ b/functions/test-db/json2/scvo/templates/home.hbs
@@ -80,8 +80,8 @@
                             </section>
                             <section class="mdc-card__actions">
                                 <ul>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="https://thegathering.scot/about/">Find out more</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="https://thegathering.scot/events/">Book to attend</a></li>
+                                    <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/about/">Find out more</a></li>
+                                    <li><a class="mdc-card__action mdc-button" href="https://thegathering.scot/events/">Book to attend</a></li>
                                 </ul>
                             </section>
                         </div>
