--- a/functions/test-db/json2/scvo/templates/page-digital.hbs
+++ b/functions/test-db/json2/scvo/templates/page-digital.hbs
@@ -64,8 +64,8 @@
                             </section>
                             <section class="mdc-card__actions">
                                 <ul>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="https://digitalparticipation.scot/skill-up">Understand the skills</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="https://digitalparticipation.scot/resources/reports">Read the research</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://digitalparticipation.scot/skill-up">Understand the skills</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://digitalparticipation.scot/resources/reports">Read the research</a></li>
                                 </ul>
                             </section>
                         </div>
@@ -83,9 +83,9 @@
                             </section>
                             <section class="mdc-card__actions">
                                 <ul>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="https://digitalparticipation.scot/sign-up">Sign the Charter</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="https://digitalparticipation.scot/signatories">View signatories</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="https://digitalparticipation.scot/resources">Find resources</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://digitalparticipation.scot/sign-up">Sign the Charter</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://digitalparticipation.scot/signatories">View signatories</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://digitalparticipation.scot/resources">Find resources</a></li>
                                 </ul>
                             </section>
                         </div>
@@ -103,9 +103,9 @@
                             </section>
                             <section class="mdc-card__actions">
                                 <ul>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="/digital/participation/champions">Digital Champion Training</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="/digital/participation/charter-fund">Apply for funding</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="/digital/participation/charter-fund/projects">View projects</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/champions">Digital Champion Training</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/charter-fund">Apply for funding</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/participation/charter-fund/projects">View projects</a></li>
                                 </ul>
                             </section>
                         </div>
@@ -139,7 +139,7 @@
                             </section>
                             <section class="mdc-card__actions">
                                 <ul>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="/post/2016/11/08/digital-call-to-action-third-sector-scotland">Read the Call to Action</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/post/2016/11/08/digital-call-to-action-third-sector-scotland">Read the Call to Action</a></li>
                                 </ul>
                             </section>
                         </div>
@@ -157,10 +157,10 @@
                             </section>
                             <section class="mdc-card__actions">
                                 <ul>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="/digital/evolution/check-up">Digital Check-Up</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="/digital/evolution/cyber-resilience">Cyber Resilience</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="/digital/evolution/senior-leaders-programme">Leaders Programme</a></li>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="https://charitycatalogue.com">Find Digital Tools</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/check-up">Digital Check-Up</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/cyber-resilience">Cyber Resilience</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/senior-leaders-programme">Leaders Programme</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="https://charitycatalogue.com">Find Digital Tools</a></li>
                                 </ul>
                             </section>
                         </div>
@@ -177,7 +177,7 @@
                             </section>
                             <section class="mdc-card__actions">
                                 <ul>
-                                    <li><a class="mdc-card__action mdc-button mdc-button__raised" href="/digital/evolution/digital-pioneers">More case studies</a></li>
+                                    <li><a class="mdc-card__action mdc-button mdc-button--raised" href="/digital/evolution/digital-pioneers">More case studies</a></li>
                                 </ul>
                             </section>
                         </div>
