--- a/functions/test-db/json2/scvo/templates/staff.hbs
+++ b/functions/test-db/json2/scvo/templates/staff.hbs
@@ -42,7 +42,7 @@
                     </div>
                     {{#compare supplimentaryResponses.author_posts.hits.total ">" 6}}
                     <p class="v-margin read-more">
-                        <a href="/post/author/{{{supplimentaryResponses.author_posts.hits.hits.[0]._source.author_slug}}}" class="mdc-button mdc-button__raised">Read more</a>
+                        <a href="/post/author/{{{supplimentaryResponses.author_posts.hits.hits.[0]._source.author_slug}}}" class="mdc-button mdc-button--raised">Read more</a>
                     </p>
                     {{/compare}}
                 </div>
