Tablet/mobile layout improvements

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -1337,6 +1337,7 @@ iframe {
         max-height: $spacing-unit*6;
     }
 }
+.mdc-temporary-drawer,
 .about.staff-team .post-info-author,
 .digital.charter-fund.projects .page-info,
 .digital.cyber-resilience.projects .page-info,
@@ -2323,6 +2324,9 @@ footer {
 }
 
 @media screen and (max-width: 991px) {
+    .mdc-temporary-drawer {
+        display: block;
+    }
     .mdc-toolbar {
         #upper-tab-bar,
         .mdc-toolbar__row.toolbar-nav {
@@ -2398,6 +2402,12 @@ footer {
     }
     .breadcrumbs {
         font-size: 85%;
+    }
+    .post-info-share.pull-right {
+        float: none !important;
+    }
+    .post-info-item {
+        display: block !important;
     }
     .pagination-distance-5 {
         display: none !important;
