--- a/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
+++ b/functions/test-db/json2/scvo/templates/grant-cyber-search.hbs
@@ -66,7 +66,7 @@
                     <div class="mdc-layout-grid equal-height">
                         <div class="mdc-layout-grid__inner">
                             {{#each primaryResponse.hits.hits}}
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell">
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
                                 {{{_source.rendered.scvo_card}}}
                             </div>
                             {{/each}}
