--- a/functions/test-db/json2/scvo/templates/page-about.hbs
+++ b/functions/test-db/json2/scvo/templates/page-about.hbs
@@ -21,12 +21,12 @@
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     {{#with primaryResponse.hits.hits.[0]._source}}
                     {{{rendered.full}}}
                     {{/with}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                     {{> menu_about}}
                 </div>
             </div>
