--- a/functions/test-db/json2/scvo/partials/handle-404.hbs
+++ b/functions/test-db/json2/scvo/partials/handle-404.hbs
@@ -3,11 +3,14 @@
 {{else}}
     <div class="mdc-layout-grid">
         <div class="mdc-layout-grid__inner">
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 content page-content">
-                <h2>Page not found</h2>
-                <p>Some witty text about how we must have misplaced it or the user was just way off in what they typed</p>
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content page-content">
+                <h2>The page you requested could not be found</h2>
+                <!-- <p>Some witty text about how we must have misplaced it or the user was just way off in what they typed</p> -->
+                <p>
+                    We recently relaunched our website and some page addresses may have changed.
+                </p>
             </div>
-            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
                 <img src="/assets/images/404.png" class="responsive">
             </div>
         </div>
@@ -15,13 +18,13 @@
 
     <hr />
 
-    {{#ifAll supplimentaryResponses.not_found  (compare supplimentaryResponses.not_found.hits.total ">" 0)}}
-        <h3>Did you mean</h3>
+    {{#ifAll supplimentaryResponses.not_found (compare supplimentaryResponses.not_found.hits.total ">" 0)}}
+        <h3>Relevant content</h3>
         {{#each supplimentaryResponses.not_found.hits.hits}}
             <!-- TITLE: {{{title}}} - SCORE: {{_score}}</h4> -->
             {{>highlight_result}}
         {{/each}}
     {{else}}
-        <p>We couldn't even find anything in our index that looks relevant</p> 
+        <h3>Try searching for a topic</h3>
     {{/ifAll}}
 {{/if}}
