--- a/functions/test-db/json2/scvo/templates/event-search.hbs
+++ b/functions/test-db/json2/scvo/templates/event-search.hbs
@@ -26,7 +26,7 @@
         <form [searchroute]="'event_search'" data-auto-search="true">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar events-sidebar">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar events-sidebar">
                         <div class="mdc-textfield mdc-textfield--upgraded">
                             <input type="text" class="mdc-textfield__input" name="q" id="events-keywords" placeholder="Keywords" value="{{params.query.q}}">
                         </div>
@@ -75,12 +75,12 @@
                             Search
                         </button>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6 content events-content">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone content events-content">
                         {{#each primaryResponse.hits.hits}}
                         {{{_source.rendered.list}}}
                         {{/each}}
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar events-sidebar">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-phone sidebar events-sidebar">
                         {{> sidebar_events}}
                     </div>
                 </div>
