--- a/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
+++ b/functions/test-db/json2/scvo/templates/evidence-library-document.hbs
@@ -26,10 +26,10 @@
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar library-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar library-sidebar">
                     {{> sidebar_library_search}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content library-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content library-content">
                     {{{primaryResponse.hits.hits.[0]._source.rendered.scvo_full}}}
                 </div>
             </div>
