--- a/functions/test-db/json2/scvo/templates/member-search.hbs
+++ b/functions/test-db/json2/scvo/templates/member-search.hbs
@@ -25,7 +25,7 @@
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                         <div class="v-margin">
                             <div class="mdc-card">
                                 <section class="mdc-card__primary">
@@ -58,7 +58,7 @@
                             {{> pagination}}
                         {{/ifAny}}
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                         {{> menu_about}}
                     </div>
                 </div>
