--- a/functions/test-db/json2/scvo/templates/member.hbs
+++ b/functions/test-db/json2/scvo/templates/member.hbs
@@ -34,7 +34,7 @@
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     {{#if primaryResponse.hits.hits.[0]}}
                     {{#with primaryResponse.hits.hits.[0]._source}}
                     {{{rendered.full}}}
@@ -43,7 +43,7 @@
                     <h2>Page not found</h2>
                     {{/if}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                     {{> menu_about}}
                 </div>
             </div>
