--- a/functions/test-db/json2/scvo/templates/page-credit-union-loan-calculator.hbs
+++ b/functions/test-db/json2/scvo/templates/page-credit-union-loan-calculator.hbs
@@ -28,7 +28,7 @@
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     <div class="full scvo-cms scvo-cms-page">
                         <form class="form-horizontal loan-form" name="loanDetails" id="loanDetails" _lpchecked="1">
                             <div class="control-group">
@@ -85,7 +85,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 content sidebar page-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone content sidebar page-sidebar">
                     {{> menu_credit_union}}
                 </div>
             </div>
