--- a/functions/test-db/json2/scvo/templates/page-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/page-landing.hbs
@@ -36,7 +36,7 @@
                     <div class="mdc-layout-grid">
                         <div class="mdc-layout-grid__inner">
                             {{#each supplimentaryResponses.related_posts.hits.hits}}
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet  mdc-layout-grid__cell--span-4-phone">
                                 {{{_source.rendered.gist}}}
                             </div>
                             {{/each}}
