--- a/functions/test-db/json2/scvo/templates/page-running-business.hbs
+++ b/functions/test-db/json2/scvo/templates/page-running-business.hbs
@@ -25,28 +25,15 @@
         {{> breadcrumbs}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     {{#with primaryResponse.hits.hits.[0]._source}}
                     {{{rendered.full}}}
                     {{/with}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                     {{> menu_running_business}}
                 </div>
-                {{#compare supplimentaryResponses.related_posts.hits.total ">" 0}}
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12 related page-related">
-                    <h3 class="blogs">Related posts</h3>
-                    <div class="mdc-layout-grid">
-                        <div class="mdc-layout-grid__inner">
-                            {{#each supplimentaryResponses.related_posts.hits.hits}}
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-                                {{{_source.rendered.gist}}}
-                            </div>
-                            {{/each}}
-                        </div>
-                    </div>
-                </div>
-                {{/compare}}
+                {{> related_posts}}
             </div>
         </div>
         {{/handle_404}}
