--- a/functions/test-db/json2/scvo/templates/post-category.hbs
+++ b/functions/test-db/json2/scvo/templates/post-category.hbs
@@ -24,7 +24,7 @@
         {{> breadcrumbs_posts}}
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 content post-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone content post-content">
                     <ul class="supplimentary-list">
                         {{#each primaryResponse.hits.hits}}
                         {{{_source.rendered.list}}}
@@ -32,7 +32,7 @@
                     </ul>
                     {{> pagination}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 sidebar post-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone sidebar post-sidebar">
                     <!-- TBC -->
                 </div>
             </div>
