--- a/functions/test-db/json2/scvo/templates/staff-search.hbs
+++ b/functions/test-db/json2/scvo/templates/staff-search.hbs
@@ -24,7 +24,7 @@
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content page-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content">
                     <form [searchroute]="'staff_search'" data-auto-search="true">
                         <h3>Filter</h3>
                         <div class="mdc-form-field">
@@ -43,9 +43,6 @@
                                 {{/each}}
                             </select>
                         </div>
-                        <!-- <button class="mdc-button mdc-button--raised" type="submit">
-                            Search
-                        </button> -->
                     </form>
 
                     {{#each primaryResponse.aggregations.query.buckets}}
@@ -57,7 +54,7 @@
                     </div>
                     {{/each}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar page-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar page-sidebar">
                     {{> menu_about}}
                 </div>
             </div>
