--- a/functions/test-db/json2/scvo/templates/trustee.hbs
+++ b/functions/test-db/json2/scvo/templates/trustee.hbs
@@ -17,7 +17,6 @@
         </div>
     </div>
     <div class="container-fluid">
-        {{#> handle_404}}
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
             <li><a href="/projects-campaigns">Projects &amp; campaigns</a></li>
@@ -27,16 +26,15 @@
         </ul>
         <div class="mdc-layout-grid">
             <div class="mdc-layout-grid__inner">
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3 sidebar trustee-sidebar">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone sidebar trustee-sidebar">
                     {{> trustee_search}}
                 </div>
-                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9 content trustee-content">
+                <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content trustee-content">
                     {{#with primaryResponse.hits.hits.[0]}}
                     {{{_source.rendered.full}}}
                     {{/with}}
                 </div>
             </div>
         </div>
-        {{/handle_404}}
     </div>
 </div>
