--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -540,10 +540,18 @@ body {
 :focus {
     outline: none;
 }
-input:focus::-webkit-input-placeholder { color:transparent; }
-input:focus:-moz-placeholder { color:transparent; } /* FF 4-18 */
-input:focus::-moz-placeholder { color:transparent; } /* FF 19+ */
-input:focus:-ms-input-placeholder { color:transparent; } /* IE 10+ */
+input:focus::-webkit-input-placeholder {
+    color:transparent;
+}
+input:focus:-moz-placeholder {
+    color:transparent;
+}
+input:focus::-moz-placeholder {
+    color:transparent;
+}
+input:focus:-ms-input-placeholder {
+    color:transparent; 
+}
 .brand-logo {
     margin-left: -$spacing-unit/2;
     img {
@@ -598,6 +606,22 @@ a:hover {
 iframe {
     border: none;
 }
+.mdc-textfield__input,
+.mdc-textfield__input:focus,
+.mdc-textfield__input:hover {
+    color: #333;
+    border-width: $spacing-unit/8;
+    border-style: solid;
+    border-color: #eee;
+    padding: 0  $spacing-unit/2;
+    margin: 0;
+    width: 100%;
+    line-height: $nav-height - 3px;
+    height: $nav-height - 3px;
+    background: transparent;
+    border-radius: 0 !important;
+    box-sizing: border-box;
+}
 .mdc-card__actions a:hover,
 .mdc-button a:hover,
 .mdc-button:hover,
@@ -632,7 +656,7 @@ iframe {
                 height: $spacing-unit*3;
                 line-height: $spacing-unit*3;
                 margin: 0;
-                padding: $spacing-unit;
+                padding: $spacing-unit $spacing-unit*3 $spacing-unit $spacing-unit;
                 font-size: 1.5rem;
             }
             .search-button-large {
@@ -1049,6 +1073,9 @@ iframe {
         }
         .mdc-toolbar__section.toolbar-search {
             vertical-align: middle;
+            .mdc-textfield input {
+                max-width: 15rem;
+            }
             .fa-search {
                 font-size: 1.3rem;
             }
@@ -1258,6 +1285,7 @@ iframe {
         // position: relative;
         height: 100%;
         padding: 0;
+        margin: $spacing-unit/2 auto;
         .mdc-layout-grid {
             width: 44%;
             margin: $spacing-unit*(2/3) 0 $spacing-unit;
@@ -1959,7 +1987,7 @@ ul.breadcrumbs {
             li {
                 display: inline-block;
                 font-size: 90%;
-                margin: 0 0 0.25rem 0.1rem;
+                margin: 0 0 0.5rem 0.1rem;
                 padding: 0 !important;
                 a {
                     padding: 0.05rem 0.4rem 0.1rem;
@@ -2057,7 +2085,13 @@ p:last-child {
     .post-info {
         margin: $spacing-unit/2 0 $spacing-unit*1.5;
         border-bottom: 1px solid rgba(0,0,0,.2);
-        padding: 0 0 $spacing-unit/2;
+        padding: 0 $spacing-unit*5 $spacing-unit/2 0;
+        // .post-info-categories {
+        //     margin-right: 0 !important;
+        // }
+        .post-info-share {
+            margin-right: -$spacing-unit*5;
+        }
     }
     .page-info {
         font-size: 0.9rem;
@@ -2403,14 +2437,26 @@ footer {
     .breadcrumbs {
         font-size: 85%;
     }
+    .full .post-info {
+        padding-right: 0;
+    }
     .post-info-share.pull-right {
         float: none !important;
+        margin-right: 0;
     }
     .post-info-item {
         display: block !important;
     }
     .pagination-distance-5 {
         display: none !important;
+    }
+    .home .search {
+        h3 {
+            margin: $spacing-unit 0;
+        }
+        .home_search_form {
+            margin-right: 0;
+        }
     }
     .digital {
         .latest_content {
@@ -2463,9 +2509,9 @@ footer {
     }
     .home .splash-image.hello {
         padding: 0;
-        min-height: 290px;
+        min-height: 30vh;
         .splash-overlay {
-            min-height: 290px;
+            min-height: 30vh;
             h1.header-text {
                 font-size: 2rem;
                 line-height: 2.2rem;
