--- a/functions/test-db/json2/scvo/templates/layout.hbs
+++ b/functions/test-db/json2/scvo/templates/layout.hbs
@@ -57,6 +57,8 @@
                                     <span class="far fa-search" aria-hidden="true"></span>
                                 </button>
                             </form>
+                        </section>
+                        <section class="mdc-toolbar__section mdc-toolbar__section--align-end mdc-toolbar__section--shrink-to-fit">
                             <button class="menu mdc-toolbar__icon mdc-toolbar__icon--menu" id="menu_button" aria-label="Menu" alt="Menu">
                                 <span class="far fa-2x fa-bars" aria-hidden="true"></span>
                             </button>
