--- a/functions/test-db/json2/scvo/templates/funding-updates.hbs
+++ b/functions/test-db/json2/scvo/templates/funding-updates.hbs
@@ -8,7 +8,7 @@
                     {{else}}
                     <h1 class="header-text">
                         <span class="header-text-banner">
-                            Funding updates 
+                            Funding updates
                         </span>
                     </h1>
                     {{/if}}
@@ -23,14 +23,14 @@
         </ul>
 
         <h2 class="mdc-card__title mdc-card__title--large">
-            {{momentFormat (moment (firstItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}} - 
+            {{momentFormat (moment (firstItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}} -
             {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}
         </h2>
         <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
                 {{#each primaryResponse.hits.hits}}
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-                    {{{_source.rendered.search_result}}}
+                    {{{_source.rendered.scvo_list}}}
                 </div>
                 {{/each}}
             </div>
