Funding updates styling

--- a/functions/test-db/json2/scvo/scvo-styles.scss
+++ b/functions/test-db/json2/scvo/scvo-styles.scss
@@ -459,6 +459,7 @@ primary-dark: #251032
 
 #spinner,
 .about,
+.funding-updates,
 .funding {
     @include theme-colours('funding');
 }
@@ -1529,6 +1530,16 @@ h1.mdc-typography--title {
 }
 .mdc-card__primary .mdc-card__title--large {
     padding-top: 0;
+}
+.funding-updates {
+    h3 {
+        margin-top: 0;
+    }
+    .page-content {
+        .mdc-layout-grid {
+            margin: $spacing-unit 0;
+        }
+    }
 }
 .support.funding .mdc-card {
     margin: $spacing-unit 0;
