--- a/functions/test-db/json2/scvo/templates/funding-updates.hbs
+++ b/functions/test-db/json2/scvo/templates/funding-updates.hbs
@@ -8,7 +8,7 @@
                     {{else}}
                     <h1 class="header-text">
                         <span class="header-text-banner">
-                            Funding updates
+                            Funding update – {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}
                         </span>
                     </h1>
                     {{/if}}
@@ -19,13 +19,14 @@
     <div class="container-fluid page-content">
         <ul class="breadcrumbs">
             <li><a href="/">Home</a></li>
-            <li>Funding updates</li>
+            <li><a href="/funding">Funding</a></li>
+            <li>Funding update – {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}</li>
         </ul>
 
-        <h2 class="mdc-card__title mdc-card__title--large">
-            {{momentFormat (moment (firstItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}} -
+        <!-- <h2>
+            Funding updates between {{momentFormat (moment (firstItem (split (atob params.range) "-")) "x") "Do MMMM"}} and
             {{momentFormat (moment (lastItem (split (atob params.range) "-")) "x") "Do MMMM YYYY"}}
-        </h2>
+        </h2> -->
         <div class="mdc-layout-grid equal-height">
             <div class="mdc-layout-grid__inner">
                 {{#each primaryResponse.hits.hits}}
