--- a/functions/test-db/json2/scvo/templates/funding-updates-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/funding-updates-head-tags.hbs
@@ -1,7 +1,7 @@
 {{#if primaryResponse.hits.hits.[0]}}
     {{#with primaryResponse.hits.hits.[0]._source}}
-        <title>SCVO – Training &amp; events search</title>
-        <meta property="og:title" content="SCVO – Training &amp; events search" data-dynamic="true">
+        <title>SCVO – Funding update</title>
+        <meta property="og:title" content="SCVO – Funding update" data-dynamic="true">
 
         {{#ifAny og_image ../og_image}}
             <meta property="og:image" content="{{default og_image ../og_image}}" data-dynamic="true">
